--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, pypy, py35, py36, py37, py38, pypy3, docs
+envlist = pypy, py35, py36, py37, py38, pypy3, docs
 
 [testenv]
 deps =
